--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "description": "# Setup",
   "main": "server.js",
   "dependencies": {
-    "bootstrap": "^4.3.1",
     "concurrently": "^4.1.1",
     "express": "^4.17.1",
-    "mongoose": "^5.6.1",
-    "react-bootstrap": "^1.0.0-beta.10"
+    "mongoose": "^5.6.1"
   },
   "engines": {
-    "node": "10.0.0"
+    "node": "10.x"
   },
   "devDependencies": {},
   "scripts": {
